--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,8 @@
-title=Title
-appTitle=exersice_2
-appDescription=App Description
+  
+title=DEFAULT
+appTitle=DEFAULT
+appDescription=DEFAULT
+helloPanelTitle=Panel Title
+showHelloButtonText=Button Text
+homePageTitle=Home Page Title
+tablePanelTitle=Table Example
