--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,8 +1,3 @@
-  
-title=DEFAULT
-appTitle=DEFAULT
-appDescription=DEFAULT
-helloPanelTitle=Panel Title
-showHelloButtonText=Button Text
-homePageTitle=Home Page Title
-tablePanelTitle=Table Example
+title=Title
+appTitle=Exercise4BookStore
+appDescription=App Description
